[gd_scene load_steps=7 format=3 uid="uid://dl52a0gbwvbk7"]

[ext_resource type="Texture2D" uid="uid://cqdkw6b4bmsk5" path="res://Map_Icons/icon.svg" id="1_0aola"]
[ext_resource type="Script" uid="uid://g7cr2gx1f4l1" path="res://Units/unit_battler/unit_icon.gd" id="2_5rflo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bm32q"]
radius = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0dvgp"]
radius = 128.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5rflo"]
radius = 640.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgi4w"]
size = Vector2(64, 254)

[node name="unit_icon" type="Node2D"]
script = ExtResource("2_5rflo")

[node name="MainBody" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainBody"]
shape = SubResource("CircleShape2D_bm32q")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Area2D2" type="Area2D" parent="."]

[node name="unit_range_collision_shape" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_0dvgp")
debug_color = Color(1, 0, 0, 0.556863)

[node name="AwareRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AwareRange"]
shape = SubResource("CircleShape2D_5rflo")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -48.0
offset_right = 64.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)

[node name="MoralBar" type="ProgressBar" parent="UI"]
modulate = Color(0, 1, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
step = 1.0
value = 1.0
show_percentage = false

[node name="ManpowerLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
text = "1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_0aola")

[node name="Line2D" type="Line2D" parent="sprite"]
points = PackedVector2Array(0, 0, -1, -638)

[node name="CollisionRay" type="Area2D" parent="sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sprite/CollisionRay"]
position = Vector2(0, -194)
shape = SubResource("RectangleShape2D_vgi4w")

[node name="Target" type="Node2D" parent="sprite/CollisionRay"]
position = Vector2(0, -256)
